# swimtrack

./: .gitignore  README.md  pyproject.toml
research/: run.py  swimtrack.ipynb
